[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprite/player/player.png" type="Texture" id=2]
[ext_resource path="res://sprite/player/eye.png" type="Texture" id=3]
[ext_resource path="res://shaders/shader.shader" type="Shader" id=4]
[ext_resource path="res://sprite/player/arrow_jump.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 26.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[node name="Player" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 8.5
custom_integrator = true
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )

[node name="Arrow_jump" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -3.77008, -27.1842 )
texture = ExtResource( 6 )

[node name="Arrow_shoot" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -2.35426, -39.4546 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.595276, -1.98425 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, 25.836 )
texture = ExtResource( 2 )
offset = Vector2( 0, -26 )

[node name="Eye" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="TimerRecoil" type="Timer" parent="."]

[node name="TimerRefill" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Player_body_shape_entered"]
[connection signal="timeout" from="TimerRecoil" to="." method="_on_TimerRecoil_timeout"]
[connection signal="timeout" from="TimerRefill" to="." method="_on_TimerRefill_timeout"]
